force-app/main/default/objects/Account/fields/AcceptEmail__c.field-meta.xml
<CustomField>
    <fullName>AcceptEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Email</label>
    <type>Checkbox</type>
</CustomField>