force-app/main/default/objects/Account/fields/AcceptLine__c.field-meta.xml
<CustomField>
    <fullName>AcceptLine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Line</label>
    <type>Checkbox</type>
</CustomField>