force-app/main/default/objects/Account/fields/AcceptTermandConditions__c.field-meta.xml
<CustomField>
    <fullName>AcceptTermandConditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Term and Conditions</label>
    <type>Checkbox</type>
</CustomField>