force-app/main/default/objects/Account/fields/AccountCode__c.field-meta.xml
<CustomField>
    <fullName>AccountCode__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Account Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>