force-app/main/default/objects/Account/fields/AccountNameTH__c.field-meta.xml
<CustomField>
    <fullName>AccountNameTH__c</fullName>
    <label>Account Name (TH)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>