force-app/main/default/objects/Account/fields/AddressEN__c.field-meta.xml
<CustomField>
    <fullName>AddressEN__c</fullName>
    <formula>TRIM(
  IF(NOT(ISBLANK(AddressNoEN__c)), AddressNoEN__c &amp; &quot;, &quot;, &quot;&quot;) +
  IF(NOT(ISBLANK(SubDistrictEN__c)), SubDistrictEN__c &amp; &quot;, &quot;, &quot;&quot;) +
  IF(NOT(ISBLANK(DistrictEN__c)), DistrictEN__c &amp; &quot;, &quot;, &quot;&quot;) +
  IF(NOT(ISBLANK(ProvinceEN__c)), ProvinceEN__c &amp; &quot; &quot;, &quot;&quot;) +
  IF(NOT(ISBLANK(ZipCodeEN__c)), ZipCodeEN__c &amp; &quot; &quot;, &quot;&quot;) +
  IF(NOT(ISBLANK(TEXT(CountryEN__c))), TEXT(CountryEN__c), &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address EN</label>
    <type>Text</type>
</CustomField>