force-app/main/default/objects/Account/fields/AddressNoEN__c.field-meta.xml
<CustomField>
    <fullName>AddressNoEN__c</fullName>
    <label>Address No. EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>