force-app/main/default/objects/Account/fields/AddressNoTH__c.field-meta.xml
<CustomField>
    <fullName>AddressNoTH__c</fullName>
    <label>Address No. TH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>