force-app/main/default/objects/Account/fields/AddressTH__c.field-meta.xml
<CustomField>
    <fullName>AddressTH__c</fullName>
    <formula>AddressNoTH__c + &apos; &apos; +   SubDistrictTH__c  + &apos; &apos; +  DistrictTH__c + &apos;   &apos; +  ProvinceTH__c + &apos; &apos; +  ZipCodeTH__c  + &apos; &apos; +  Text(CountryTH__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address TH</label>
    <type>Text</type>
</CustomField>