force-app/main/default/objects/Account/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <description>วันเกิด</description>
    <label>Birthday</label>
    <type>Date</type>
</CustomField>