force-app/main/default/objects/Account/fields/ContactDate__c.field-meta.xml
<CustomField>
    <fullName>ContactDate__c</fullName>
    <description>วันที่ติดต่อเข้ามา</description>
    <label>Contact Date</label>
    <type>Date</type>
</CustomField>