force-app/main/default/objects/Account/fields/CountryEN__c.field-meta.xml
<CustomField>
    <fullName>CountryEN__c</fullName>
    <label>Country EN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>