force-app/main/default/objects/Account/fields/CountryTH__c.field-meta.xml
<CustomField>
    <fullName>CountryTH__c</fullName>
    <label>Country TH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CountryTH</valueSetName>
    </valueSet>
</CustomField>