force-app/main/default/objects/Account/fields/CustomerGrade__c.field-meta.xml
<CustomField>
    <fullName>CustomerGrade__c</fullName>
    <label>Customer Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Prestige</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Essential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>