force-app/main/default/objects/Account/fields/CustomerStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomerStatus__c</fullName>
    <description>สถานะของ Customer</description>
    <label>Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Visitor</fullName>
            </value>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>