force-app/main/default/objects/Account/fields/DistrictEN__c.field-meta.xml
<CustomField>
    <fullName>DistrictEN__c</fullName>
    <label>District EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>