force-app/main/default/objects/Account/fields/DistrictTH__c.field-meta.xml
<CustomField>
    <fullName>DistrictTH__c</fullName>
    <label>District TH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>