force-app/main/default/objects/Account/fields/DoNotCall__c.field-meta.xml
<CustomField>
    <fullName>DoNotCall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ใช้สำหรับเลือกว่าลูกค้าคนนี้ต้องการให้โทรหรือไม่</description>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>