force-app/main/default/objects/Account/fields/FaxExt__c.field-meta.xml
<CustomField>
    <fullName>FaxExt__c</fullName>
    <label>Fax Ext.</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>