force-app/main/default/objects/Account/fields/FirstnameEN__c.field-meta.xml
<CustomField>
    <fullName>FirstnameEN__c</fullName>
    <description>ชื่ื่อจริงภาษาอังกฤษ</description>
    <label>Firstname EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>