force-app/main/default/objects/Account/fields/IDCardNumber__c.field-meta.xml
<CustomField>
    <fullName>IDCardNumber__c</fullName>
    <label>Identification Card No.</label>
    <length>18</length>
    <type>Text</type>
</CustomField>