force-app/main/default/objects/Account/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gourmet Cooking Classes with Celebrity Chefs</fullName>
            </value>
            <value>
                <fullName>Private Wine Tasting</fullName>
            </value>
            <value>
                <fullName>Luxury Travel and Bespoke Holidays</fullName>
            </value>
            <value>
                <fullName>Art Collecting and Private Gallery Tours</fullName>
            </value>
            <value>
                <fullName>Philanthropy and Social Impact Investing</fullName>
            </value>
            <value>
                <fullName>Private Aviation (Owning Jets, Helicopters, Chartering Services)</fullName>
            </value>
            <value>
                <fullName>Yacht Ownership and Sailing Regattas</fullName>
            </value>
            <value>
                <fullName>Golf Club Membership and Exclusive Golf Tournaments</fullName>
            </value>
            <value>
                <fullName>Polo and Equestrian Sports</fullName>
            </value>
            <value>
                <fullName>High-End Jewelry and Watch Collecting</fullName>
            </value>
            <value>
                <fullName>Exclusive Fashion Shows and Haute Couture</fullName>
            </value>
            <value>
                <fullName>Rare Vintage Car Collecting and Racing Events</fullName>
            </value>
            <value>
                <fullName>Luxury Real Estate Investment and Property Development</fullName>
            </value>
            <value>
                <fullName>Private Members’ Clubs and Networking Societies</fullName>
            </value>
            <value>
                <fullName>Private Concerts and Cultural Events</fullName>
            </value>
            <value>
                <fullName>Health and Wellness Retreats with Renowned Practitioners</fullName>
            </value>
            <value>
                <fullName>Exclusive Culinary Experiences (Michelin-starred Dining)</fullName>
            </value>
            <value>
                <fullName>Adventure Travel</fullName>
            </value>
            <value>
                <fullName>Collecting Rare Books and Manuscripts</fullName>
            </value>
            <value>
                <fullName>Antique Furniture and Decorative Arts</fullName>
            </value>
            <value>
                <fullName>Luxury Sustainable Living and Off-Grid Properties</fullName>
            </value>
            <value>
                <fullName>Scuba Diving in Remote and Unexplored Locations</fullName>
            </value>
            <value>
                <fullName>Exclusive VIP Access to Fashion Week Events</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>