force-app/main/default/objects/Account/fields/InterestOther__c.field-meta.xml
<CustomField>
    <fullName>InterestOther__c</fullName>
    <label>Interest Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>