force-app/main/default/objects/Account/fields/LastContactIntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>LastContactIntegrationStatus__c</fullName>
    <label>Last Contact Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>