force-app/main/default/objects/Account/fields/LastnameEN__c.field-meta.xml
<CustomField>
    <fullName>LastnameEN__c</fullName>
    <description>นามสกุลภาษาอังกฤษ</description>
    <label>Lastname EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>