force-app/main/default/objects/Account/fields/MailingAddressEN__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressEN__c</fullName>
    <formula>TRIM(
  IF(NOT(ISBLANK(MailingAddressNoEN__c)), MailingAddressNoEN__c &amp; &quot;, &quot;, &quot;&quot;) +
  IF(NOT(ISBLANK(MaillingSubDistrictEN__c)), MaillingSubDistrictEN__c &amp; &quot;, &quot;, &quot;&quot;) +
  IF(NOT(ISBLANK(MailingDistrictEN__c)), MailingDistrictEN__c &amp; &quot;, &quot;, &quot;&quot;) +
  IF(NOT(ISBLANK(MailingProvinceEN__c)), MailingProvinceEN__c &amp; &quot; &quot;, &quot;&quot;) +
  IF(NOT(ISBLANK(MailingZipCodeEN__c)), MailingZipCodeEN__c &amp; &quot;  &quot;, &quot;&quot;) +
  IF(NOT(ISBLANK(TEXT(MailingCountryEN__c))), TEXT(MailingCountryEN__c), &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address EN</label>
    <type>Text</type>
</CustomField>