force-app/main/default/objects/Account/fields/MailingAddressNoEN__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressNoEN__c</fullName>
    <label>Mailing Address No. EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>