force-app/main/default/objects/Account/fields/MailingAddressNoTH__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressNoTH__c</fullName>
    <label>Mailing Address No. TH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>