force-app/main/default/objects/Account/fields/MailingAddressTH__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressTH__c</fullName>
    <formula>MailingAddressNoTH__c  + &apos; &apos; +  MaillingSubDistrictTH__c  + &apos; &apos; +  MailingDistrictTH__c  + &apos; &apos; +  MailingProvinceTH__c  + &apos; &apos; +  MailingZipCodeTH__c  + &apos; &apos; + Text( MailingCountryTH__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address TH</label>
    <type>Text</type>
</CustomField>