force-app/main/default/objects/Account/fields/MailingCountryEN__c.field-meta.xml
<CustomField>
    <fullName>MailingCountryEN__c</fullName>
    <label>Mailing Country EN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>