force-app/main/default/objects/Account/fields/MailingCountryTH__c.field-meta.xml
<CustomField>
    <fullName>MailingCountryTH__c</fullName>
    <label>Mailing Country TH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CountryTH</valueSetName>
    </valueSet>
</CustomField>