force-app/main/default/objects/Account/fields/MailingDistrictEN__c.field-meta.xml
<CustomField>
    <fullName>MailingDistrictEN__c</fullName>
    <label>Mailing District EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>