force-app/main/default/objects/Account/fields/MailingDistrictTH__c.field-meta.xml
<CustomField>
    <fullName>MailingDistrictTH__c</fullName>
    <label>Mailing District TH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>