force-app/main/default/objects/Account/fields/MailingProvinceEN__c.field-meta.xml
<CustomField>
    <fullName>MailingProvinceEN__c</fullName>
    <label>Mailing Province EN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>