force-app/main/default/objects/Account/fields/MailingProvinceTH__c.field-meta.xml
<CustomField>
    <fullName>MailingProvinceTH__c</fullName>
    <label>Mailing Province TH</label>
    <length>80</length>
    <type>Text</type>
</CustomField>