force-app/main/default/objects/Account/fields/MailingZipCodeEN__c.field-meta.xml
<CustomField>
    <fullName>MailingZipCodeEN__c</fullName>
    <label>Mailing Zip Code EN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>