force-app/main/default/objects/Account/fields/MailingZipCodeTH__c.field-meta.xml
<CustomField>
    <fullName>MailingZipCodeTH__c</fullName>
    <label>Mailing Zip Code TH</label>
    <length>20</length>
    <type>Text</type>
</CustomField>