force-app/main/default/objects/Account/fields/MaillingSubDistrictEN__c.field-meta.xml
<CustomField>
    <fullName>MaillingSubDistrictEN__c</fullName>
    <label>Mailling Sub District EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>