force-app/main/default/objects/Account/fields/MaillingSubDistrictTH__c.field-meta.xml
<CustomField>
    <fullName>MaillingSubDistrictTH__c</fullName>
    <label>Mailling Sub District TH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>