force-app/main/default/objects/Account/fields/PassportNo__c.field-meta.xml
<CustomField>
    <fullName>PassportNo__c</fullName>
    <description>หมายเลขหนังสือเดินทาง</description>
    <label>Passport Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>