force-app/main/default/objects/Account/fields/ProvinceEN__c.field-meta.xml
<CustomField>
    <fullName>ProvinceEN__c</fullName>
    <label>Province EN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>