force-app/main/default/objects/Account/fields/ProvinceTH__c.field-meta.xml
<CustomField>
    <fullName>ProvinceTH__c</fullName>
    <label>Province TH</label>
    <length>80</length>
    <type>Text</type>
</CustomField>