force-app/main/default/objects/Account/fields/SalesComment__c.field-meta.xml
<CustomField>
    <fullName>SalesComment__c</fullName>
    <description>Comment จาก Sales</description>
    <label>Sales Comment</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>