force-app/main/default/objects/Account/fields/SalesGrade__c.field-meta.xml
<CustomField>
    <fullName>SalesGrade__c</fullName>
    <description>เกรดลูกค้าจาก Sales</description>
    <label>Sales Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>