force-app/main/default/objects/Account/fields/SalesLead__c.field-meta.xml
<CustomField>
    <fullName>SalesLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>