force-app/main/default/objects/Account/fields/SubDistrictEN__c.field-meta.xml
<CustomField>
    <fullName>SubDistrictEN__c</fullName>
    <label>Sub District EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>