force-app/main/default/objects/Account/fields/SubDistrictTH__c.field-meta.xml
<CustomField>
    <fullName>SubDistrictTH__c</fullName>
    <label>Sub District TH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>