force-app/main/default/objects/Account/fields/TaxID__c.field-meta.xml
<CustomField>
    <fullName>TaxID__c</fullName>
    <description>เลขที่ภาษี</description>
    <label>Tax ID</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>