force-app/main/default/objects/Account/fields/TotalBuyingAmountTHB__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingAmountTHB__c</fullName>
    <description>มูลค่าที่ลูกค้าซื้อทั้งหมด</description>
    <label>Total Buying Amount (THB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>