force-app/main/default/objects/Account/fields/WeChatID__c.field-meta.xml
<CustomField>
    <fullName>WeChatID__c</fullName>
    <description>ไอดี Wechat</description>
    <label>WeChat ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>