force-app/main/default/objects/Account/fields/WhatsAppID__c.field-meta.xml
<CustomField>
    <fullName>WhatsAppID__c</fullName>
    <description>ไอดี Whatapp</description>
    <label>WhatsApp ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>