force-app/main/default/objects/Account/fields/ZipCodeEN__c.field-meta.xml
<CustomField>
    <fullName>ZipCodeEN__c</fullName>
    <label>Zip Code EN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>