force-app/main/default/objects/Account/fields/ZipCodeTH__c.field-meta.xml
<CustomField>
    <fullName>ZipCodeTH__c</fullName>
    <label>Zip Code TH</label>
    <length>20</length>
    <type>Text</type>
</CustomField>