force-app/main/default/objects/Account/recordTypes/Co_Owner_Corporate.recordType-meta.xml
<RecordType>
    <fullName>Co_Owner_Corporate</fullName>
    <active>true</active>
    <label>Co-Owner - Corporate</label>
</RecordType>