force-app/main/default/objects/Account/recordTypes/Co_Owner_Individual.recordType-meta.xml
<RecordType>
    <fullName>Co_Owner_Individual</fullName>
    <active>true</active>
    <label>Co-Owner - Individual</label>
</RecordType>