force-app/main/default/objects/Account/recordTypes/Prospect_Corporate.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Corporate</fullName>
    <active>true</active>
    <label>Prospect - Corporate</label>
</RecordType>