force-app/main/default/objects/Account/recordTypes/Prospect_Individual.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Individual</fullName>
    <active>true</active>
    <label>Prospect - Individual</label>
</RecordType>