force-app/main/default/objects/Account/validationRules/Check_Interest_is_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Interest_is_Other</fullName>
    <active>true</active>
    <description>If Interest is selected as Other, interest Others must not be blank</description>
    <errorConditionFormula>AND(
ISPICKVAL( Interest__c ,&quot;Other&quot;),
ISBLANK( InterestOther__c )
)</errorConditionFormula>
    <errorDisplayField>InterestOther__c</errorDisplayField>
    <errorMessage>Please input Interest Other for Other</errorMessage>
</ValidationRule>