force-app/main/default/objects/Account/validationRules/CheckPhone.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckPhone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(
        ISBLANK( Phone )
    ),
    OR(
        NOT(
            REGEX(Phone , &quot;^(\\+?\\(?[0-9]+\\)?[0-9]{8,9})$&quot;)
        ),
        AND(
            LEFT(Phone , 1) = &quot;0&quot;,
            NOT(
                OR(
                    LEN(Phone ) = 9,
                    LEN(Phone ) = 10
                )
            )
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please check a valid Phone Number.</errorMessage>
</ValidationRule>