force-app/main/default/objects/Account/validationRules/PreventFutureBirthdate.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventFutureBirthdate</fullName>
    <active>true</active>
    <errorConditionFormula>Birthdate__c &gt;= TODAY()</errorConditionFormula>
    <errorDisplayField>Birthdate__c</errorDisplayField>
    <errorMessage>Please enter a valid date.</errorMessage>
</ValidationRule>