force-app/main/default/objects/Account/validationRules/RestrictIdNumberForThai.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictIdNumberForThai</fullName>
    <active>true</active>
    <description>If nationality = Thai, the Id number must not be blank. Only Record Type &apos;Co Owner - Individual&apos;.</description>
    <errorConditionFormula>AND(
        ISPICKVAL(Nationality__c , &quot;Thai&quot;),
        ISBLANK(IDCardNumber__c ),
        RecordType.Name = &quot;Co-Owner - Individual&quot;
)</errorConditionFormula>
    <errorDisplayField>IDCardNumber__c</errorDisplayField>
    <errorMessage>Please fill in ID Number.</errorMessage>
</ValidationRule>