force-app/main/default/objects/Account/validationRules/RestrictPassportforNotThai.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictPassportforNotThai</fullName>
    <active>true</active>
    <description>If nationality &lt;&gt; Thai, the Passport Number must not be blank. Only Record Type &apos;Co Owner - Individual&apos;.</description>
    <errorConditionFormula>AND(
        NOT(ISPICKVAL(Nationality__c , &quot;Thai&quot;)),
        ISBLANK( PassportNo__c ),
        RecordType.Name = &quot;Co-Owner - Individual&quot;
    )</errorConditionFormula>
    <errorDisplayField>PassportNo__c</errorDisplayField>
    <errorMessage>Please fill in Passport Number.</errorMessage>
</ValidationRule>