force-app/main/default/objects/Account/validationRules/RestrictTaxIdForCoporate.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictTaxIdForCoporate</fullName>
    <active>true</active>
    <description>Record Type &apos;Co Owner - Corporate&apos; and Nationality is not blank user have to fill in &apos;Tax ID&apos;</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK(TEXT(Nationality__c))),
        ISBLANK( TaxID__c ),
        RecordType.Name = &quot;Co-Owner - Corporate&quot;
)</errorConditionFormula>
    <errorDisplayField>TaxID__c</errorDisplayField>
    <errorMessage>Please fill in Company Tax ID.</errorMessage>
</ValidationRule>