force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>AccountNameTH__c</columns>
    <columns>AccountCode__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Interest__c</columns>
    <columns>Nationality__c</columns>
    <columns>ConsentDate__c</columns>
    <columns>SalesLead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>